examples/errors/bracket_only.fil
diagram component;

frontend: Rectangle [color="red"
